--- a/html/mountain/mountain.html
+++ b/html/mountain/mountain.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>幽遊山徑</title>
     <link href="./mountain.css" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <link href="../navbar.css" rel="stylesheet">
     <link href="../footer.css" rel="stylesheet">
     <link rel="icon" href="./images/icon/title_icon.ico" type="image/x-icon"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
       <nav class="navbar">
@@ -87,7 +84,7 @@
         <a href="../index/index.html">首頁</a > / <a href="#"a>主題景點</a> / <span>幽遊山徑</span>
       </div>
       <main class="main">
-        <p class="sol animate__animated animate__fadeInDown">基隆擁抱著海洋與山丘，愜意的吹著山風俯瞰海洋，亦或是沿著海岸望向山丘，都是遊歷基隆的最佳選擇</p>
+        <p class="sol" data-aos="fade-up">基隆擁抱著海洋與山丘，愜意的吹著山風俯瞰海洋，亦或是沿著海岸望向山丘，都是遊歷基隆的最佳選擇</p>
         <div class="valley">
           <p class="valley">望幽谷</p>
           <p class="valley_content">基隆市八斗子漁港旁的美麗山谷，與山海相依，望幽谷是一個V字型的山谷，可在綠油油的草地放鬆也可看到八斗子漁港來往的漁船，以及可眺望到遠處的基隆嶼，遊客至此，在環狀的稜線及山谷步道，漫步於山谷草地，走於臨崖的稜線，遠眺海天，俯瞰崖下的海蝕平台豆腐岩，還有雄奇可觀的臨海峭壁，夜晚時分海面上漁火點點與九份山城的燈火，形成一齣唯美的山海之戀。</p>
@@ -138,7 +135,7 @@
           <p class="bus">基隆市公車總站搭103號公車至「八斗子站」下車</p>
           <p class="park">停車場 65高地收費停車場</p>
         </div>
-        <div class="rock">
+        <div class="rock" data-aos="fade-up-right">
           <p class="valley">老鷹岩</p>
           <p class="valley_content">老鷹岩觀景台可以俯瞰著大武崙澳底漁港，遠處那小小凸出的石頭則是基隆嶼，觀景台旁的基石有一個明顯的控制點，除了這裡的展望台角度特別好之外，沿著回程的路上也可以到城堡觀景台 ，而那邊的高度則是可以看到整個情人湖的高點，試著在這附近找看看有沒有不同角度可以看到漁港的位置。</p>
           <img class="icon" src="./images/icon/Group_icon.png">
@@ -188,7 +185,7 @@
           <p class="bus">搭乘基隆市公車509號「情人湖站」下車</p>
           <p class="park">上下兩處停車場</p>
         </div>
-        <div class="hole">
+        <div class="hole" data-aos="fade-up-left">
           <p class="valley">佛手洞</p>
           <p class="valley_content">佛手洞之名係因洞內深處的石壁上方，有天然風化形成像是手掌和五指的節理，唯妙唯肖就像是佛的手印，加上又位於「仙洞巖」隔壁，所以被取名「佛手洞」，佛手洞內有數個走道分別通往不同洞窟，走入洞穴有種探險掘密的新鮮觸動，陰涼感受又如天然冷氣，十分特殊。</p>
           <img class="icon" src="./images/icon/Group_icon.png">
@@ -262,8 +259,6 @@
       </div>
       <div class="slogan">
         <p class="h1">基隆漫步 Keelung Walk</p>
-        <!-- <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
-        <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a> -->
         <p class="local">連結在地生活、人物、文化、飲食、旅遊
           深入更多的精彩。</p>
         <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
@@ -295,6 +290,10 @@
         $("aside").removeClass("-open");
             });
         });
+      </script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
       </script>
   </body>
 </html>
