--- a/html/index/index.html
+++ b/html/index/index.html
@@ -171,9 +171,11 @@
       </div>
       <div class="block_2" >
         <div class="background">
-          <a id="theme" href="../mountain/mountain.html">幽遊山徑</a>
-          <img id="left" src="icon/left_vector.svg">
-          <img id="right" src="icon/right_vector.svg">
+          <div class="control">
+            <a id="theme" href="../mountain/mountain.html">幽遊山徑</a>
+            <img id="left" src="icon/left_vector.svg">
+            <img id="right" src="icon/right_vector.svg">
+          </div>
         </div>
         <div class="images">
           <a href="../mountain/mountain.html"><img class="rwd" src="./images/vector/the1.png"></a>
@@ -191,22 +193,22 @@
       </div>
       <div class="grid" data-aos="fade-up-left">
           <div class="grid_item">
-            <a href="../master/master.html"><img class="po1" src="./images/proman/p1.png"></a>
+            <a href="../master/master.html"><img class="po1" src="./images/proman/p1.png"><p>陳宣<span>熱衷於旅遊的陳宣認為旅行是不斷學習的方法，且最大的魅力往往在於能接觸不同的文化</span></p></a>
           </div>
           <div class="grid_item">
-            <a href="../master/master.html"><img class="po2" src="./images/proman/p3.png"></a>
+            <a href="../master/master.html"><img class="po2" src="./images/proman/p3.png"><p>林依<span>在地生活28年，是樂團的主唱，也是旅遊部落格作家，就讓在地人來帶大家探訪神祕小店!</span></p></a>
           </div>
           <div class="grid_item">
-            <a href="../master/master.html"><img class="po3" src="./images/proman/p2.png"></a>
+            <a href="../master/master.html"><img class="po3" src="./images/proman/p2.png"><p>吳靈<span>深入瞭解平時未注意到的美景，並透過包容友善的心去珍惜身旁的人事物。</span></p></a>
           </div>
           <div class="grid_item">
-            <a href="../master/master.html"><img class="po4" src="./images/proman/p4.png"></a>
+            <a href="../master/master.html"><img class="po4" src="./images/proman/p4.png"><p>狗柏<span>透過雙眼察覺周遭景色，文筆中展現出每個平凡角落暗藏的獨特風采給觀眾</span></p></a>
           </div>
           <div class="grid_item">
-            <a href="../master/master.html"><img class="po5" src="./images/proman/p5.png"></a>
+            <a href="../master/master.html"><img class="po5" src="./images/proman/p5.png"><p>欣凌<span>除了韓國當地旅遊資訊，也偶爾介紹日本、台灣與香港的旅行見聞。</span></p></a>
           </div>
           <div class="grid_item">
-            <a href="../master/master.html"><img class="po6" src="./images/proman/p6.png"></a>
+            <a href="../master/master.html"><img class="po6" src="./images/proman/p6.png"><p>百陞<span>以獨特的形象玩樂台灣景點，目前堪稱是台灣前三大YouTuber之一</span></p></a>
           </div>
       </div>
     </article>
