--- a/html/mountain/mountain_rwd.html
+++ b/html/mountain/mountain_rwd.html
@@ -137,7 +137,7 @@
                 <img class="row" src="./images/other/row.png">
                 <img class="icon" src="./images/icon/Group_icon.png">
                 <p class="position">望幽谷濱海步道</p>
-                <p class="bus">基隆市公車總站搭103號公車至「八斗子站」下車</p>
+                <p class="bus">基隆市公車總站搭公車至八斗子站下車</p>
                 <p class="park">停車場 65高地收費停車場</p>
               </div>
             </div>
@@ -150,7 +150,6 @@
                 <input type="radio" id="control-4" name="control_1" checked>
                 <input type="radio" id="control-5" name="control_1">
                 <input type="radio" id="control-6" name="control_1">
-                <!--  Left/Right Button  -->
                 <div class="navigator slide-1">
                   <label for="control-6">
                     <i class="fas fa-chevron-left_1"></i>
@@ -175,7 +174,6 @@
                     <i class="fas fa-chevron-right_1"></i>
                   </label>
                 </div>
-                <!--  /Left/Right Button  -->
                 <li class="slide"></li>
                 <li class="slide"></li>
                 <li class="slide"></li>
@@ -206,7 +204,6 @@
                 <input type="radio" id="control-7" name="control_2" checked>
                 <input type="radio" id="control-8" name="control_2">
                 <input type="radio" id="control-9" name="control_2">
-                <!--  Left/Right Button  -->
                 <div class="navigator slide-1">
                   <label for="control-9">
                     <i class="fas fa-chevron-left_2"></i>
@@ -231,7 +228,6 @@
                     <i class="fas fa-chevron-right_2"></i>
                   </label>
                 </div>
-                <!--  /Left/Right Button  -->
                 <li class="slide"></li>
                 <li class="slide"></li>
                 <li class="slide"></li>
@@ -256,7 +252,7 @@
           </div>
         </div>
         <div class="guess">
-          <P>猜你也想去</P>
+          <P data-aos="fade-up">猜你也想去</P>
         </div>
         <div class="column">
           <a href="#" class="go1"><img src="./images/go1.png"><div class="notes">和平島公園</div></a>
