--- a/html/index/index.html
+++ b/html/index/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <nav class="navbar">
+    <div class="light"></div>
     <aside class="aside">
       <img class="x" src="../x.svg">
       <div class="background"></div>
