--- a/html/recommend/recommend.html
+++ b/html/recommend/recommend.html
@@ -12,9 +12,9 @@
   <link href="../footer.css" rel="stylesheet">
   <link rel="icon" href="./images/icon/icon.ico" type="image/x-icon" />
 </head>
-
 <body>
   <nav class="navbar">
+    <div class="light"></div>
     <aside class="aside">
       <img class="x" src="../x.svg">
       <div class="background"></div>
@@ -242,21 +242,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
     $(function () {
-
-      // 點擊
-      $("div.img").on("click", function () {
-        // -open 的樣式切換
-        $("aside").toggleClass("-open");
+        // 點擊
+        $("img.menu").on("click", function () {
+          // -open 的樣式切換
+          $("aside").toggleClass("-open"), $("div.light").toggleClass("-on");
+        });
       });
-    });
-    $(function () {
-
-      // 點擊
-      $("img.x").on("click", function () {
-        // -open 的樣式切換
-        $("aside").removeClass("-open");
+      $(function () {
+        // 點擊
+        $("img.x").on("click", function () {
+          // -open 的樣式切換
+          $("aside").removeClass("-open"), $("div.light").removeClass("-on");
+        });
       });
-    });
   </script>
 </body>
 
