--- a/html/master/master.html
+++ b/html/master/master.html
@@ -82,21 +82,22 @@
         <p>達人分享</p>
       </div>
       <div class="bread">
-        <a href="../index/index.html">首頁</a > / <span>達人分享</span>
-      </div>
+        <div class="center">
+          <a href="../index/index.html">首頁</a > /<span>達人分享</span>
+        </div>
       <main class="main">
         <article class="frist">
-          <img src="./images/block_1.png">
+          <img src="./images/block_1.png" data-aos="zoom-in">
           <p>林依，在地生活28年，是樂團的主唱，也是旅遊部落格作家，就讓在地人來帶大家探訪神祕小店!</p>
         </article>
-        <p class="title" data-aos="fade-up">“說到基隆就不能不提到特別的咖啡文化了基隆可說是台灣最早的咖啡城市，早期的基隆”港是國際貿易最繁盛的港口，也是接觸西化最快速的地方，擁有發展歷史最久、最密集的咖啡廳。</p>
+        <p class="title" data-aos="fade-up">說到基隆就不能不提到特別的咖啡文化了基隆可說是台灣最早的咖啡城市，早期的基隆港是國際貿易最繁盛的港口，也是接觸西化最快速的地方，擁有發展歷史最久、最密集的咖啡廳。</p>
         <article class="two">
           <div class="background" >
             <p class="one" data-aos="zoom-in">基隆的咖啡文化有著獨特的韻味，用一杯賽風壺煮的咖啡醒醒頭腦，開始一天的生活，在基隆喝咖啡就是這麼生活化。</p>
               <img src="./images/block_2_1.png" data-aos="zoom-in">
               <img src="images/block_2_2.png" data-aos="zoom-in">
               <img src="./images/block_2_3.png" data-aos="zoom-in">
-            <p class="two" data-aos="zoom-in">金豆舊店的原址位於31號陸橋下，因想為客人帶來更完整的品嘗咖啡過程，
+            <p class="two" data-aos="zoom-in">這次造訪的金豆咖啡原址位於31號陸橋下，因想為客人帶來更完整的品嘗咖啡過程，
               所以在現址開了一間有室內座位的店面，保留了房子原始的格局包含挑高的空間及巴洛克風的外觀。</p>
           </div>
         </article>
