--- a/html/custom/custom.html
+++ b/html/custom/custom.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>自定行程</title>
-    <link href="./custom.css" rel="stylesheet">
+    <link href="./custom.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link href="../navbar.css" rel="stylesheet">
-    <link href="../footer.css" rel="stylesheet">
-    <link rel="icon" href="./icon/title_icon.ico" type="image/x-icon"/>
+    <link href="../navbar.css" rel="stylesheet" />
+    <link href="../footer.css" rel="stylesheet" />
+    <link rel="icon" href="./icon/title_icon.ico" type="image/x-icon" />
   </head>
   <body>
     <nav class="navbar">
+      <div class="light"></div>
       <aside class="aside">
-        <img class="x" src="../x.svg">
+        <img class="x" src="../x.svg" />
         <div class="background"></div>
         <ul>
           <li class="a1">
@@ -44,10 +45,14 @@
               小吃攻略
               <ul class="food">
                 <li>
-                  <a href="../night_market/night_market.html"><span>廟口特輯</span></a>
+                  <a href="../night_market/night_market.html"
+                    ><span>廟口特輯</span></a
+                  >
                 </li>
                 <li>
-                  <a href="../night_market/night_market.html"><span class="xxx">咖啡之旅</span></a>
+                  <a href="../night_market/night_market.html"
+                    ><span class="xxx">咖啡之旅</span></a
+                  >
                 </li>
               </ul>
             </div>
@@ -57,7 +62,9 @@
               <span class="background">行程安排</span>
               <ul class="travel">
                 <li>
-                  <a href="../recommend/recommend.html"><span>推薦行程</span></a>
+                  <a href="../recommend/recommend.html"
+                    ><span>推薦行程</span></a
+                  >
                 </li>
                 <li>
                   <a href="../custom/custom.html"><span>自訂行程</span></a>
@@ -76,67 +83,76 @@
           </li>
         </ul>
       </aside>
-      <a href="../index/index.html"><img class="logo" src="../../use_photo/navbar/kwlogo.png "></a>
-      <a href="../index/index.html"><img  class="logo2" src="../../use_photo/navbar/fron_logo.png"></a>
-      <div class="img"><img class="menu" src="../../use_photo/navbar/bg.png"></div>
+      <a href="../index/index.html"
+        ><img class="logo" src="../../use_photo/navbar/kwlogo.png "
+      /></a>
+      <a href="../index/index.html"
+        ><img class="logo2" src="../../use_photo/navbar/fron_logo.png"
+      /></a>
+      <div class="img">
+        <img class="menu" src="../../use_photo/navbar/bg.png" />
+      </div>
     </nav>
     <div class="banner">
       <p>開始一場旅行吧!</p>
     </div>
     <div class="bread">
-      <a href="../index/index.html">首頁</a > / <a href="#"a>行程安排</a> / <span>自訂行程</span>
+      <a href="../index/index.html">首頁</a> / <a href="#" a>行程安排</a> /
+      <span>自訂行程</span>
     </div>
     <main class="main">
-      <p class="sol animate__animated animate__fadeInDown"> 將景點圖片拖移至框框內，開始規劃今天的行程吧!</p>
+      <p class="sol animate__animated animate__fadeInDown">
+        將景點圖片拖移至框框內，開始規劃今天的行程吧!
+      </p>
       <article class="images">
         <div class="grid">
           <div class="grid_item">
-            <img class="point_1" src="./images/01.png">
+            <img class="point_1" src="./images/01.png" />
           </div>
           <div class="grid_item">
-            <img class="point_2" src="./images/02.png">
+            <img class="point_2" src="./images/02.png" />
           </div>
           <div class="grid_item">
-            <img class="point_3" src="./images/03.png">
+            <img class="point_3" src="./images/03.png" />
           </div>
           <div class="grid_item">
-            <img class="point_4" src="./images/04.png">
+            <img class="point_4" src="./images/04.png" />
           </div>
           <div class="grid_item">
-            <img class="point_5" src="./images/05.png">
+            <img class="point_5" src="./images/05.png" />
           </div>
           <div class="grid_item">
-            <img class="point_6" src="./images/06.png">
+            <img class="point_6" src="./images/06.png" />
           </div>
           <div class="grid_item">
-            <img class="point_7" src="./images/07.png">
+            <img class="point_7" src="./images/07.png" />
           </div>
           <div class="grid_item">
-            <img class="point_8" src="./images/08.png">
+            <img class="point_8" src="./images/08.png" />
           </div>
           <div class="grid_item">
-            <img class="point_9" src="./images/09.png">
+            <img class="point_9" src="./images/09.png" />
           </div>
           <div class="grid_item">
-            <img class="point_10" src="./images/10.png">
+            <img class="point_10" src="./images/10.png" />
           </div>
           <div class="grid_item">
-            <img class="point_11" src="./images/11.png">
+            <img class="point_11" src="./images/11.png" />
           </div>
           <div class="grid_item">
-            <img class="point_12" src="./images/12.png">
+            <img class="point_12" src="./images/12.png" />
           </div>
         </div>
       </article>
       <article class="goto">
-        <img class="vector" src="./icon/Vector 3.png">
+        <img class="vector" src="./icon/Vector 3.png" />
         <div class="stop_1">
           <p>停靠站1</p>
-          <img class="plus" src="./icon/plus.png">
+          <img class="plus" src="./icon/plus.png" />
         </div>
         <div class="stop_2">
           <p>停靠站2</p>
-          <img class="plus" src="./icon/plus.png">
+          <img class="plus" src="./icon/plus.png" />
         </div>
         <div class="stop_3">
           <p>停靠站3</p>
@@ -144,11 +160,16 @@
       </article>
       <article class="next">
         <div class="background">
-          <p class="time">
-            路程規劃時間
-          </p>
+          <p class="time">路程規劃時間</p>
           <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28895.236207871327!2d121.73333815953364!3d25.13891846670842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d4e4456aeee69%3A0xe0644dd52b7522f3!2z5Z-66ZqG5YWn5riv!5e0!3m2!1szh-TW!2stw!4v1634827639547!5m2!1szh-TW!2stw" width="475" height="390" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28895.236207871327!2d121.73333815953364!3d25.13891846670842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d4e4456aeee69%3A0xe0644dd52b7522f3!2z5Z-66ZqG5YWn5riv!5e0!3m2!1szh-TW!2stw!4v1634827639547!5m2!1szh-TW!2stw"
+              width="475"
+              height="390"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
           </div>
           <div class="suggest">
             <p class="title">建議您規劃:<span> 3小時</span></p>
@@ -160,46 +181,54 @@
     </main>
     <div class="footer">
       <div class="index">
-      <a href="#">常見問題</a>
-      <a href="#">交通資訊</a>
-      <a href="#">聯絡我們</a>
-      <a href="#">隱私政策</a>
-      <a href="#">服務安全宣告</a>
+        <a href="#">常見問題</a>
+        <a href="#">交通資訊</a>
+        <a href="#">聯絡我們</a>
+        <a href="#">隱私政策</a>
+        <a href="#">服務安全宣告</a>
       </div>
       <div class="slogan">
         <p class="h1">基隆漫步 Keelung Walk</p>
         <!-- <a class="fbicon" href="#"><img src="../../use_photo/footer/fb.png"></a>
         <a class="igicon" href="#"><img src="../../use_photo/footer/ig.png"></a> -->
-        <p class="local">連結在地生活、人物、文化、飲食、旅遊
-          深入更多的精彩。</p>
-        <p class="copy">Copyright  2021 基隆漫步 Keelung Walk All rights reserved.</p>
+        <p class="local">
+          連結在地生活、人物、文化、飲食、旅遊 深入更多的精彩。
+        </p>
+        <p class="copy">
+          Copyright 2021 基隆漫步 Keelung Walk All rights reserved.
+        </p>
       </div>
       <div class="tiba">
-        <p>本網站為緯育TibaMe前端設計工程師班第72期學員專題作品
-          <br>
-          &#42;若有侵權疑慮，您可以私訊<a href="https://www.facebook.com/webindex/">[TibaMe-前端設計工程師養成班]</a>，後續會由專人協助處理。
-          <br> 
-        <a href="https://docs.google.com/document/d/1MTq7m2yDvs8SjwMVf-UZ7V_P-xti-CthnQFX-fWS7ks/edit?usp=sharing">-----網站參考資源請點此-----</a>
+        <p>
+          本網站為緯育TibaMe前端設計工程師班第72期學員專題作品
+          <br />
+          &#42;若有侵權疑慮，您可以私訊<a
+            href="https://www.facebook.com/webindex/"
+            >[TibaMe-前端設計工程師養成班]</a
+          >，後續會由專人協助處理。
+          <br />
+          <a
+            href="https://docs.google.com/document/d/1MTq7m2yDvs8SjwMVf-UZ7V_P-xti-CthnQFX-fWS7ks/edit?usp=sharing"
+            >-----網站參考資源請點此-----</a
+          >
         </p>
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
-      $(function(){
-
-      // 點擊
-      $("div.img").on("click", function(){
-        // -open 的樣式切換
-      $("aside").toggleClass("-open");
+      $(function () {
+        // 點擊
+        $("div.img").on("click", function () {
+          // -open 的樣式切換
+          $("aside").toggleClass("-open"), $("div.light").toggleClass("-on");
         });
       });
-      $(function(){
-
-      // 點擊
-      $("img.x").on("click", function(){
+      $(function () {
+        // 點擊
+        $("img.x").on("click", function () {
           // -open 的樣式切換
-      $("aside").removeClass("-open");
-          });
+          $("aside").removeClass("-open"), $("div.light").removeClass("-on");
+        });
       });
     </script>
   </body>
