--- a/html/custom/custom.html
+++ b/html/custom/custom.html
@@ -97,50 +97,90 @@
       <p>開始一場旅行吧!</p>
     </div>
     <div class="bread">
-      <a href="../index/index.html">首頁</a> / <a href="#" a>行程安排</a> /
-      <span>自訂行程</span>
+      <div class="center">
+        <a href="../index/index.html">首頁</a > / <a href="#"a>行程安排</a> / <span>推薦行程</span>
+      </div>
     </div>
     <main class="main">
       <p class="sol animate__animated animate__fadeInDown">
         將景點圖片拖移至框框內，開始規劃今天的行程吧!
       </p>
+      <p id="phone" class="sol animate__animated animate__fadeInDown">
+        依照想去的順序點選景點圖片，開始規劃今天的行程吧!
+      </p>
       <article class="images">
         <div class="grid">
           <div class="grid_item">
-            <img class="point_1" src="./images/01.png" />
+            <div class="content">
+              <img class="point_1" src="./images/01.png" />
+              <p>老鷹岩</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_2" src="./images/02.png" />
+            <div class="content">
+              <img class="point_2" src="./images/02.png" />
+              <p>八斗子站</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_3" src="./images/03.png" />
+            <div class="content">
+              <img class="point_3" src="./images/03.png" />
+              <p>鐵道自行車</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_4" src="./images/04.png" />
+            <div class="content">
+              <img class="point_4" src="./images/04.png" />
+              <p>望幽谷</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_5" src="./images/05.png" />
+            <div class="content">
+              <img class="point_5" src="./images/05.png" />
+              <p>潮境公園</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_6" src="./images/06.png" />
+            <div class="content">
+              <img class="point_6" src="./images/06.png" />
+              <p>火號山</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_7" src="./images/07.png" />
+            <div class="content">
+              <img class="point_7" src="./images/07.png" />
+              <p>正濱漁港</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_8" src="./images/08.png" />
+            <div class="content">
+              <img class="point_8" src="./images/08.png" />
+              <p>海科館</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_9" src="./images/09.png" />
+            <div class="content">
+              <img class="point_9" src="./images/09.png" />
+              <p>佛手洞</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_10" src="./images/10.png" />
+            <div class="content">
+              <img class="point_10" src="./images/10.png" />
+              <p>槓子寮山</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_11" src="./images/11.png" />
+            <div class="content">
+              <img class="point_11" src="./images/11.png" />
+              <p>外木山步道</p>
+            </div>
           </div>
           <div class="grid_item">
-            <img class="point_12" src="./images/12.png" />
+            <div class="content">
+              <img class="point_12" src="./images/12.png" />
+              <p>基隆燈塔</p>
+            </div>
           </div>
         </div>
       </article>
