--- a/html/recommend/recommend.html
+++ b/html/recommend/recommend.html
@@ -93,6 +93,9 @@
   <main class="main">
     <p class="sol" data-aos="fade-up">魅力基隆，這樣玩</p>
     <div class="fit">
+      <div class="line">
+        <img src="./images/icon/line.svg" >
+      </div>
       <article class="line">
         <p class="title">景點路線</p>
         <div class="background">
@@ -133,15 +136,15 @@
         </div>
       </article>
       <section class="content">
-        <div class="station">
+        <div class="station ">
           <div class="background">
-            <p class="title">
-              八斗子車站
-            </p>
-            <p class="content">
-              有「北台灣多良車站」的八斗子車站是臺灣鐵路管理局所屬深澳線位在基隆市中正區砂子里的鐵路車站，，全線最後1989年停止辦理客、貨運，為復駛供八斗子國立海洋科技博物館聯外交通使用做準備，2014年1月9日起正式恢復營運載客。
-            </p>
-            <img src="./images/station.png">
+              <p class="title">
+                八斗子車站
+              </p>
+              <p class="content">
+                有「北台灣多良車站」的八斗子車站是臺灣鐵路管理局所屬深澳線位在基隆市中正區砂子里的鐵路車站，，全線最後1989年停止辦理客、貨運，為復駛供八斗子國立海洋科技博物館聯外交通使用做準備，2014年1月9日起正式恢復營運載客。
+              </p>
+              <img src="./images/station.png">
           </div>
         </div>
         <div class="time" 
